fix for portal tilt mem bug
For some reason if you overflow the svg element by too much it breaks
perspective transforms and blows up gpu mem.  Affects firefox and
chromium so must be in the math.

--- a/pages/scss/map.scss
+++ b/pages/scss/map.scss
@@ -49,6 +49,19 @@
         .map-background {
             visibility: hidden;
         }
+
+        &::after {
+            z-index: -1;
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            background-image: linear-gradient(45deg, #a00, #20d);
+        }
     }
 
     > .sauce-map {
